[package]
name = "bbk_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
prometheus = "0.14.0"
hyper = { version = "1", features = ["server"] }
tokio = { version = "1", features = [
    "fs",
    "macros",
    "net",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

thiserror = "2"
lazy_static = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
